# RustMpiMandelbrot

./: Cargo.toml  README.md  run.sh
src/: main.rs
src/experiments/: arbprecision.rs
