[package]
name = "mandel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.1"
image = "0.24.6"
mpi = "0.6.0"
num-complex = "0.4.3"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rug = "1.19.2"
